ported to 1.20.6!
Pretty much working